[tool.poetry]
name = "hello_world"
version = "0.1.0"
description = "Says Hello to the world!"
authors = ["John Does <john.does@minisoft.com>"]
license = "proprietary"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
